feat: main article done

--- a/introduce.html
+++ b/introduce.html
@@ -5,5 +5,12 @@
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <title>Branch practice!!</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <article>
+        <h1>도쿄 올림픽 개막!</h1>
+        <p>1년 연기된 202 도쿄올림픽이 도쿄 에서 개막...</p>
+      </article>
+    </main>
+  </body>
 </html>
